Repo retooled to match pattern from https://github.com/htruccoUCSC/Love2DTest

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,46 @@
-# Ignore makelove build outputs
-makelove-build/
+# Compiled Lua sources
+luac.out
+
+# luarocks build files
+*.src.rock
+*.zip
+*.tar.gz
+
+# Object files
+*.o
+*.os
+*.ko
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+*.def
+*.exp
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Node
+node_modules/
+web/
+
+# Love2D
+*.love
