--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,83 @@
-name: Deploy FinalProject121 to GitHub Pages
-
-on:
-  push:
-    branches: ["main"]
-  workflow_dispatch:
+name: Build and Deploy LÖVE (love.js)
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+on:
+  push:
+    branches: [ main ]
+
 jobs:
   build:
+    name: Build .love and web package
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Prepare files
-        run: |
-          cp main.lua FinalProject.121/
+      - name: Build game.love from `src/`
+        run: git archive --format=zip -o game.love HEAD:src
 
-      # If you ever need a build step (e.g., bundling) add it here.
+      - name: Show game.love info
+        run: ls -lh game.love || true
 
-      - name: Upload site artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Upload .love artifact
+        uses: actions/upload-artifact@v4
         with:
-          path: FinalProject121
+          name: game.love
+          path: game.love
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install love.js from npm
+        run: npm install --no-save love.js
+
+      - name: Build web package with love.js
+        run: npx love.js -c -t SquareTest game.love web
+
+      - name: Ensure web contains game.love fallback
+        run: |
+          mkdir -p web
+          cp -f game.love web/game.love || true
+
+      - name: Show web contents
+        run: ls -la web || true
+
+      - name: Upload web artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: web
+          path: web
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
+    name: Deploy to GitHub Pages (creates repository deployment)
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+
     steps:
+      - name: Download web artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: web
+          path: web
+
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: web
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
