--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Copy build contents into web (PWA files)
         run: |
           mkdir -p build
-          cp -rf build/* web/ || true
+          cp -rfv build/* web/ || true
 
       - name: Show web contents
         run: ls -la web || true
